# hindsight

./: .gitignore
cmake/: mozsvc.cmake
src/: CMakeLists.txt  dirent_windows.h  hindsight.c  hs_analysis_plugins.c  hs_analysis_plugins.h  hs_checkpoint_reader.c  hs_checkpoint_reader.h  hs_checkpoint_writer.c  hs_config.c  hs_input.c  hs_input.h  hs_input_plugins.c  hs_input_plugins.h  hs_logger.c  hs_output.c  hs_output.h  hs_output_plugins.c  hs_output_plugins.h  hs_util.c  platform.h  pthread_windows.c  pthread_windows.h  sem_windows.h  win_commons.c  win_commons.h  win_dirent.c  win_dirent.h  win_pthread.c  win_pthread.h  win_sem.c  win_sem.h
src/test/: CMakeLists.txt
